--- a/Geolocalization.ipynb
+++ b/Geolocalization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 598,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "from pandas.io.json import json_normalize\n",
     "import pandas as pd\n",
     "from IPython.display import Image\n",
+    "\n",
     "        \n",
     "#import the data \n",
     "Starbucks=pd.read_json(\"INPUT/Starbucks1.json\")\n",
@@ -23,8 +24,7 @@
     "\n",
     "#this database includes All the different category_codes documents (all together for the map plots)\n",
     "BigComp=pd.read_json(\"INPUT/alltot_processed.json\")\n",
-    "\n",
-    "\n"
+    "events=pd.read_json(\"INPUT/Events.json\")\n"
    ]
   },
   {
@@ -56,7 +56,7 @@
     "    {\"deadpooled_year\": None},\n",
     "    {\"number_of_employees\":{\"$gte\":60}},\n",
     "    {\"number_of_employees\":{\"$lte\":100}}\n",
-    "I could see that most of my successful competitors were settled around Los Angeles-Beverly hills area.\n",
+    "I could see that most of my successful competitors in Game_video were settled around Los Angeles-Beverly hills area(Social Gaming, ).\n",
     "\n"
    ]
   },
@@ -346,6 +346,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The point found with the approach 2 is very close to the point found with approach 1. So I think it is a good location for my company."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -575,28 +582,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a list of the events close to the company location coordinates with the distance (km)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 600,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Snow Patrol Acoustic Tour</td>\n",
+       "      <td>0.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Snow Patrol Acoustic Tour</td>\n",
+       "      <td>0.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Netflix Is A Joke Fest Presents: Taylor Tomlinson</td>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Passenger</td>\n",
+       "      <td>0.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Netflix Is A Joke Fest Presents: Catherine Cohen</td>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Netflix Is A Joke Fest Presents: London Hughes</td>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Netflix Is A Joke Fest Presents: Cristela Alonzo</td>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Netflix Is A Joke Fest Presents: Endless Honey...</td>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Netflix Is A Joke Fest Presents: Mo Gilligan</td>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<Response [403]>"
+       "                                                name  distance\n",
+       "0                          Snow Patrol Acoustic Tour      0.97\n",
+       "1                          Snow Patrol Acoustic Tour      0.97\n",
+       "2  Netflix Is A Joke Fest Presents: Taylor Tomlinson      0.45\n",
+       "3                                          Passenger      0.97\n",
+       "4   Netflix Is A Joke Fest Presents: Catherine Cohen      0.45\n",
+       "5     Netflix Is A Joke Fest Presents: London Hughes      0.45\n",
+       "6   Netflix Is A Joke Fest Presents: Cristela Alonzo      0.45\n",
+       "7  Netflix Is A Joke Fest Presents: Endless Honey...      0.45\n",
+       "8       Netflix Is A Joke Fest Presents: Mo Gilligan      0.45"
       ]
      },
-     "execution_count": 591,
+     "execution_count": 600,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "events[[\"name\",'distance']]\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# functions used"
+    "# functions used in the report"
    ]
   },
   {
