--- a/Geolocalization.ipynb
+++ b/Geolocalization.ipynb
@@ -56,8 +56,9 @@
     "    {\"deadpooled_year\": None},\n",
     "    {\"number_of_employees\":{\"$gte\":60}},\n",
     "    {\"number_of_employees\":{\"$lte\":100}}\n",
-    "I could see that most of my successful competitors in Game_video were settled around Los Angeles-Beverly hills area(Social Gaming, ).\n",
-    "\n"
+    "I could see that most of my successful competitors in Game_video were settled around Los Angeles-Beverly hills area like Play station,Social Gaming... \n",
+    "https://www.builtinla.com/2016/10/24/video-game-studios-know\n",
+    "https://www.builtinla.com/companies/type/gaming-companies-los%20angeles\n"
    ]
   },
   {
