--- a/Geolocalization.ipynb
+++ b/Geolocalization.ipynb
@@ -74,7 +74,8 @@
    "source": [
     "From the graph below can be seen that the avarage total money raised [USD] is not very high in California,\n",
     "in fact most of the startups are very small and there are a few outliers.\n",
-    "But if we restrivt to the Gaming industry the avarage for small company is higher."
+    "But if we restrict to the Gaming industry the avarage for small company is higher.\n",
+    "Claifornia anyway is in the top five States as for avarage total money raised."
    ]
   },
   {
